--- a/public/assets/sass/variables.scss
+++ b/public/assets/sass/variables.scss
@@ -4,6 +4,7 @@ $black: #212123;
 $white: #FFFFFF;
 $dark-blue: #0C1464;
 $slate-blue: #1C3E57;
+$light-slate-blue: rgba($slate-blue, 0.65);
 $bright-blue: #4F66EE;
 
 $red-1: #F5E9E5;
