--- a/public/assets/css/form-preview.css
+++ b/public/assets/css/form-preview.css
@@ -1,9 +1,9 @@
-#SFDSWF-Container {
-  padding: 2em 5em;
+body {
+  background: #FFFFFF;
 }
 
-body {
-  background-color: #fff;
+#SFDSWF-Container {
+  padding: 2em 5em;
 }
 
 #SFDSWFB-legend {
@@ -19,8 +19,8 @@ body {
 
 .is-selected-in-editor::before {
   position: absolute;
-  background: rgba(66, 139, 202, 0.1);
-  border: 2px solid rgba(66, 139, 202, 0.3);
+  background: rgba(169, 214, 234, 0.4);
+  border: 2px solid rgba(169, 214, 234, 0.6);
   border-radius: 4px;
   content: "";
   top: -1rem;
@@ -36,3 +36,4 @@ body {
 .is-selected-in-editor h3:last-of-type {
   margin-bottom: 0;
 }
+
