Refactor panel headers

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -427,7 +427,7 @@ hr.and::before {
 
 .header-container {
   max-width: none;
-  padding: 0 15px;
+  padding: 0 1rem;
 }
 
 a:link,
@@ -458,7 +458,6 @@ a:active {
 .leftPanel,
 .middlePanel,
 .rightPanel-preview-wrapper {
-  padding: 3rem 1rem 0;
   position: relative;
   height: calc(100vh - 4rem);
   overflow: scroll;
@@ -546,6 +545,31 @@ a:active {
   height: 100%;
   position: relative;
   z-index: 2;
+}
+
+.panel-header {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  background: rgba(28, 62, 87, 0.03);
+}
+
+.panel-header button {
+  display: inline-block;
+  padding: 0.5em;
+  border-radius: 8px;
+  border: 1px solid #4F66EE;
+  color: #4F66EE;
+  background: #FFFFFF;
+  font-size: 0.8em;
+  margin-left: 0.5em;
+}
+
+.panel-content {
+  padding: 0.5rem 1rem;
+  min-height: calc(100vh - 12.5rem);
 }
 
 .splitter {
@@ -637,35 +661,6 @@ a:active {
   border-color: #aaa;
 }
 
-.menu-button {
-  display: block;
-  padding: 0.5em;
-  border-radius: 5px;
-  border: 1px solid #ddd;
-  position: absolute;
-  top: -0.5em;
-}
-
-.clone-button {
-  right: 2.5em;
-}
-
-.delete-button {
-  right: 0;
-}
-
-.embed-toggle {
-  right: 5.5em;
-}
-
-.settings-toggle {
-  right: 3em;
-}
-
-.preview-window {
-  right: 1em;
-}
-
 .col-xl-1 > a.min-hidden {
   display: none;
 }
@@ -674,30 +669,21 @@ a:active {
   display: none;
 }
 
+.field-item-group {
+  margin-bottom: 1em;
+  display: block;
+}
+
 .field-item {
   padding: 0.5em;
-  margin: 0.5em;
+  margin: 0 0.5rem 1rem 0;
   border: 2px solid #4F66EE;
   color: #4F66EE;
   font-weight: bold;
   border-radius: 5px;
   cursor: pointer;
-  float: left;
-}
-
-.field-item.t2 {
-  color: purple;
-  border-color: purple;
-}
-
-.field-item.t3 {
-  color: red;
-  border-color: red;
-}
-
-.field-item.t4 {
-  color: orange;
-  border-color: orange;
+  display: inline-block;
+  background: #FFFFFF;
 }
 
 .field-item:hover {
